@@ -70,6 +70,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #25945: Fixed a crash when unpickle the functools.partial object with
+  wrong state.  Fixed a leak in failed functools.partial constructor.
+  "args" and "keywords" attributes of functools.partial have now always types
+  tuple and dict correspondingly.
+
 - Issue #26202: copy.deepcopy() now correctly copies range() objects with
   non-atomic attributes.
 
